--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Mercedes</li>
+		<li data-ns-test="shoppingList">BMW</li>
+		<li data-ns-test="shoppingList">Ferrari</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">goa</li>
+		<li data-ns-test="holidayList">bali</li>
+		<li data-ns-test="holidayList">dubai</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
